<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:id="@+id/table_heading_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/table_header"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/table_header"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/klub" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/table_header"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/ma" />
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/me" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/s" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/k" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/gm" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/gk" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/table_header"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/points" />-->
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/table_heading_layout"/>
</LinearLayout>